# MySimpleComputer

./: CMakeLists.txt  bigchars
include/: myBigChars.h  myReadkey.h  myTerm.h  mymemory.h
src/: COMMANDS  main.c  myBigChars.c  myReadKey.c  myTerm.c  mymemory.c
